# ancho

./: .gitignore  .gitmodules  LICENSE
IE/AnchoBgSrv/: AnchoAddonService.cpp  AnchoAddonService.h  AnchoBackgroundAPI.cpp  AnchoBgSrv.idl  CMakeLists.txt  IECookieManager.cpp  PopupWindow.cpp  stdafx.h
IE/AnchoBgSrv/AnchoBackgroundServer/: AsynchronousTaskManager.hpp  COMConversions.hpp  JavaScriptCallback.hpp  PeriodicTimer.hpp  TabManager.hpp
IE/AnchoBgSrv/res/js/: api.js  extension.js  tabs.js  webRequest.js
IE/AnchoBgSrv/src/: AsynchronousTaskManager.cpp  TabManager.cpp
IE/ancho/: AnchoPassthruAPP.cpp  AnchoPassthruAPP.h  AnchoRuntime.cpp  stdafx.h
IE/anchocommons/: Exceptions.h  SimpleWrappers.h
code/IE/: CMakeLists.txt
code/IE/AnchoBgSrv/: AnchoAddonService.cpp  AnchoAddonService.h  AnchoBackground.cpp  AnchoBackgroundAPI.cpp  AnchoBackgroundAPI.h  AnchoBgSrv.idl  AnchoBgSrv.rc  AnchoBgSrv.rgs  CMakeLists.txt  IECookieManager.cpp  IECookieManager.h  PopupWindow.cpp  PopupWindow.h  stdafx.h
code/IE/AnchoBgSrv/AnchoBackgroundServer/: AsynchronousTaskManager.hpp  COMConversions.hpp  JSConstructorManager.hpp  PeriodicTimer.hpp  TabManager.hpp  UpdateChecking.hpp  WindowManager.hpp
code/IE/AnchoBgSrv/res/js/: api.js  app.js  browserAction.js  extension.js  pageAction.js  runtime.js  storage.js  tabs.js  windows.js
code/IE/AnchoBgSrv/res/js/specifications/: runtime_spec.js
code/IE/AnchoBgSrv/res/js/utils/: utils.js
code/IE/AnchoBgSrv/res/toolbars/: browserActionToolbar.html
code/IE/AnchoBgSrv/src/: TabManager.cpp  UpdateChecking.cpp  WindowManager.cpp
code/IE/ancho/: AnchoAddon.cpp  AnchoAddon.h  AnchoBrowserEvents.cpp  AnchoBrowserEvents.h  AnchoPassthruAPP.cpp  AnchoPassthruAPP.h  AnchoRuntime.cpp  AnchoRuntime.h  AnchoRuntime.rgs  AnchoToolbar.rgs  CMakeLists.txt  CookieManager.cpp  CookieManager.h  DOMWindowWrapper.cpp  DOMWindowWrapper.h  HtmlToolbarWindow.cpp  Toolbar.cpp  Toolbar.h  ancho.cpp  ancho.idl  ancho.rc  dllmain.cpp  dllmain.h  resource.h  stdafx.cpp  stdafx.h
code/IE/anchocommons/: CMakeLists.txt  Exceptions.h  SimpleWrappers.h  anchocommons.h  strings.cpp  utilities.cpp
code/IE/anchocommons/AnchoCommons/: AsynchronousTaskManager.hpp  COMConversions.hpp  JSValueWrapper.hpp  JavaScriptCallback.hpp
code/IE/anchocommons/src/: AsynchronousTaskManager.cpp
code/IE/crxProcessing/crxProcessing/: extract.hpp
code/IE/crxProcessing/src/: extract.cpp
code/firefox/: bootstrap.js  install.rdf
code/firefox/content/: background.js
code/firefox/js/: api.js  backgroundPrivileged.js  binder.js  browserAction.js  browserEvents.js  clipboard.js  config.js  console.js  contentPolicy.js  cookies.js  debugger.js  debuggerData.js  debuggerNetwork.js  events.js  extension.js  history.js  httpRequestObserver.js  i18n.js  protocolHandler.js  require.js  scripting.js  state.js  storage.js  tabs.js  utils.js  webRequest.js  windowWatcher.js
code/firefox/modules/: Require.jsm
deploy/: Gruntfile.js  package.json
deploy/IE/: build.sh  setup.iss
deploy/firefox/: Gruntfile.js  package.json
firefox/: bootstrap.js
firefox/js/: backgroundPrivileged.js  browserAction.js  browserEvents.js  console.js  contentPolicy.js  debugger.js  extension.js  history.js  httpRequestObserver.js  i18n.js  protocolHandler.js  scripting.js  state.js  tabs.js  webRequest.js  windowWatcher.js
tests/firefox/specs/: Binder.spec.js
tests/test-suite-extension/: manifest.json
tests/test-suite-extension/_locales/en/: messages.json
tests/test-suite-extension/js/: background.js
